# opentitan

sw/device/lib/runtime/: epmp.h
sw/device/silicon_creator/lib/: error.h  meson.build
sw/device/silicon_creator/lib/epmp/: epmp.c  epmp.h  epmp_defs.h  epmp_unittest.cc  meson.build  test.c  test.h
sw/device/silicon_creator/mask_rom/: mask_rom.c  mask_rom_epmp.S  mask_rom_epmp.c  mask_rom_epmp.h  mask_rom_epmp_test.c  mask_rom_start.S  meson.build
sw/device/silicon_creator/rom_exts/: meson.build  rom_ext.c
test/systemtest/: config.py
